[gd_scene load_steps=87 format=3 uid="uid://qxfwvb01spn5"]

[ext_resource type="Script" uid="uid://nnojmf3u50e5" path="res://scenes/main_boss.gd" id="1_cobqp"]
[ext_resource type="Texture2D" uid="uid://cc7gprfxssaer" path="res://assets/Undead executioner puppet/png/attacking.png" id="1_eidx3"]
[ext_resource type="Texture2D" uid="uid://dcsbw5ijiqsau" path="res://assets/Undead executioner puppet/png/death.png" id="2_cobqp"]
[ext_resource type="Texture2D" uid="uid://bw2x4shfyyr0y" path="res://assets/Undead executioner puppet/png/idle2.png" id="3_fl76q"]
[ext_resource type="Texture2D" uid="uid://c4h21m2r6o4kd" path="res://assets/Undead executioner puppet/png/idle.png" id="4_ia7xp"]
[ext_resource type="Texture2D" uid="uid://dmv07ojvh41vp" path="res://assets/Undead executioner puppet/png/summon.png" id="5_bs1fo"]
[ext_resource type="Texture2D" uid="uid://ck50dakugu7gr" path="res://assets/Undead executioner puppet/png/skill1.png" id="6_quolt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gqs53"]
radius = 16.03122

[sub_resource type="AtlasTexture" id="AtlasTexture_2qri6"]
atlas = ExtResource("1_eidx3")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1hh4d"]
atlas = ExtResource("1_eidx3")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_tayej"]
atlas = ExtResource("1_eidx3")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_24fox"]
atlas = ExtResource("1_eidx3")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_c2twx"]
atlas = ExtResource("1_eidx3")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kudig"]
atlas = ExtResource("1_eidx3")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_3eyuj"]
atlas = ExtResource("1_eidx3")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_xx8d6"]
atlas = ExtResource("1_eidx3")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_miw4h"]
atlas = ExtResource("1_eidx3")
region = Rect2(200, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_y8x4j"]
atlas = ExtResource("1_eidx3")
region = Rect2(300, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_fyf5g"]
atlas = ExtResource("1_eidx3")
region = Rect2(400, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2f5r"]
atlas = ExtResource("1_eidx3")
region = Rect2(500, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_uh6mo"]
atlas = ExtResource("1_eidx3")
region = Rect2(0, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6605"]
atlas = ExtResource("2_cobqp")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_trdly"]
atlas = ExtResource("2_cobqp")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_hckfh"]
atlas = ExtResource("2_cobqp")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbp4q"]
atlas = ExtResource("2_cobqp")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_fa380"]
atlas = ExtResource("2_cobqp")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_hmwar"]
atlas = ExtResource("2_cobqp")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_d0n3l"]
atlas = ExtResource("2_cobqp")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_i407i"]
atlas = ExtResource("2_cobqp")
region = Rect2(700, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_4bik3"]
atlas = ExtResource("2_cobqp")
region = Rect2(800, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_xd3fh"]
atlas = ExtResource("2_cobqp")
region = Rect2(900, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3vb5"]
atlas = ExtResource("2_cobqp")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1l0v2"]
atlas = ExtResource("2_cobqp")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_34o4b"]
atlas = ExtResource("2_cobqp")
region = Rect2(200, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ddt7v"]
atlas = ExtResource("2_cobqp")
region = Rect2(300, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2pogd"]
atlas = ExtResource("2_cobqp")
region = Rect2(400, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3ks1"]
atlas = ExtResource("2_cobqp")
region = Rect2(500, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfl0f"]
atlas = ExtResource("2_cobqp")
region = Rect2(600, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_mq2qb"]
atlas = ExtResource("2_cobqp")
region = Rect2(700, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qxdw"]
atlas = ExtResource("2_cobqp")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_gfnxs"]
atlas = ExtResource("2_cobqp")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_18ceq"]
atlas = ExtResource("2_cobqp")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_xrk2o"]
atlas = ExtResource("2_cobqp")
region = Rect2(700, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_if44q"]
atlas = ExtResource("2_cobqp")
region = Rect2(800, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_lm6tr"]
atlas = ExtResource("2_cobqp")
region = Rect2(900, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_88ubv"]
atlas = ExtResource("2_cobqp")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_h2n5x"]
atlas = ExtResource("2_cobqp")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpy1v"]
atlas = ExtResource("2_cobqp")
region = Rect2(200, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_egdn7"]
atlas = ExtResource("2_cobqp")
region = Rect2(300, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_67rsw"]
atlas = ExtResource("3_fl76q")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4djw"]
atlas = ExtResource("3_fl76q")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_rflp4"]
atlas = ExtResource("3_fl76q")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4moe"]
atlas = ExtResource("3_fl76q")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_id6vg"]
atlas = ExtResource("3_fl76q")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_xp2h1"]
atlas = ExtResource("3_fl76q")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcatg"]
atlas = ExtResource("3_fl76q")
region = Rect2(200, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_bv6tw"]
atlas = ExtResource("3_fl76q")
region = Rect2(300, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_nn8kg"]
atlas = ExtResource("4_ia7xp")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwbvk"]
atlas = ExtResource("4_ia7xp")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2aw2v"]
atlas = ExtResource("4_ia7xp")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1ri3"]
atlas = ExtResource("4_ia7xp")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_lscqd"]
atlas = ExtResource("5_bs1fo")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hr1f"]
atlas = ExtResource("5_bs1fo")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_evgn5"]
atlas = ExtResource("5_bs1fo")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kslbq"]
atlas = ExtResource("5_bs1fo")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_w3ehi"]
atlas = ExtResource("5_bs1fo")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1mb5h"]
atlas = ExtResource("6_quolt")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1fmc0"]
atlas = ExtResource("6_quolt")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kr03o"]
atlas = ExtResource("6_quolt")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_estw7"]
atlas = ExtResource("6_quolt")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wlc31"]
atlas = ExtResource("6_quolt")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_k54dx"]
atlas = ExtResource("6_quolt")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_00bkn"]
atlas = ExtResource("6_quolt")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_3bcax"]
atlas = ExtResource("6_quolt")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_68dpw"]
atlas = ExtResource("6_quolt")
region = Rect2(200, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_118by"]
atlas = ExtResource("6_quolt")
region = Rect2(300, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_afksc"]
atlas = ExtResource("6_quolt")
region = Rect2(400, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jicnq"]
atlas = ExtResource("6_quolt")
region = Rect2(500, 100, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_ium7p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2qri6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1hh4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tayej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24fox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c2twx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kudig")
}],
"loop": true,
"name": &"Attack1",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3eyuj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xx8d6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_miw4h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y8x4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fyf5g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2f5r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uh6mo")
}],
"loop": true,
"name": &"Attack2",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6605")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_trdly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hckfh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbp4q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fa380")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hmwar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d0n3l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i407i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4bik3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xd3fh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3vb5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1l0v2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_34o4b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ddt7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2pogd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3ks1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfl0f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mq2qb")
}],
"loop": true,
"name": &"Death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qxdw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gfnxs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_18ceq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xrk2o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_if44q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lm6tr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_88ubv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h2n5x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpy1v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_egdn7")
}],
"loop": true,
"name": &"Disappear",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_67rsw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4djw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rflp4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4moe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_id6vg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xp2h1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bcatg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bv6tw")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nn8kg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwbvk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2aw2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1ri3")
}],
"loop": true,
"name": &"Idle_bottom",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lscqd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hr1f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_evgn5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kslbq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w3ehi")
}],
"loop": true,
"name": &"Summon",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1mb5h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1fmc0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kr03o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_estw7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wlc31")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k54dx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00bkn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3bcax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_68dpw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_118by")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afksc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jicnq")
}],
"loop": true,
"name": &"skill1",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_bs1fo"]
resource_name = "Attack1"
length = 1.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"Attack1", &"Attack1"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1854226, 0.8, 0.93333334, 1.0333333, 1.1333333, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 1, 2, 3, 4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.94137627, 1.2246042),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerDetection/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.94137627, 1.2246042),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Hitbox/CollisionShape2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.06666667, 0.06724116, 0.8333333, 0.9434139, 0.96666664),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(35, 10), Vector2(-1, -26), Vector2(37.000004, -16.000002), Vector2(35, 10.999998), Vector2(32, 12.999999)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Hitbox/CollisionShape2D:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.06666667, 0.06724116, 0.8333333, 0.9434139, 0.96666664, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(1, 1), Vector2(1, 1), Vector2(1, 1), Vector2(1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Hitbox/CollisionShape2D:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.075391605, 0.8333333, 0.9434139, 0.96666664),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.83775806, -0.1675516, 0.66243666, 0.83775806]
}

[sub_resource type="Animation" id="Animation_cobqp"]
resource_name = "Attack2"
length = 1.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Attack2"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.26666668, 0.96666664, 1.0666667, 1.1666666, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerDetection/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.0025046, 1.3590865),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.0025046, 1.3631618),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Hitbox/CollisionShape2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.03871461, 0.04075222, 1.0333333, 1.1594007, 1.2307171),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(35, 10), Vector2(-11.999992, 8.000001), Vector2(23, 16), Vector2(37.000004, 1), Vector2(38, -10.999999)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Hitbox/CollisionShape2D:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.03871461, 1.0333333, 1.1594007, 1.2307171),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-0.1675516, 1.1728612, 0.1675516, 0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Hitbox/CollisionShape2D:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.044827443, 1.0391816, 1.2307171),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.867, 1.012), Vector2(1.302, 1.519), Vector2(0.707, 0.825)]
}

[sub_resource type="Animation" id="Animation_ia7xp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Attack1"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerDetection/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Hitbox/CollisionShape2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(35, 10)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Hitbox/CollisionShape2D:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Hitbox/CollisionShape2D:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.1675516]
}

[sub_resource type="Animation" id="Animation_fl76q"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.13333334, 0.26666668, 0.4, 0.53333336, 0.6666667, 0.76666665, 0.8666667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_quolt"]
_data = {
&"Attack1": SubResource("Animation_bs1fo"),
&"Attack2": SubResource("Animation_cobqp"),
&"RESET": SubResource("Animation_ia7xp"),
&"idle": SubResource("Animation_fl76q")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_cobqp"]
radius = 30.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1hh4d"]
radius = 4.2106094
height = 31.598675

[node name="MainBoss" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_cobqp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3, -4)
shape = SubResource("CircleShape2D_gqs53")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ium7p")
animation = &"Attack1"
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_quolt")
}
autoplay = "idle"

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(14, -2)
shape = SubResource("CircleShape2D_cobqp")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(35, 10)
rotation = -0.1675516
shape = SubResource("CapsuleShape2D_1hh4d")
disabled = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="on_animation_finished"]
[connection signal="body_entered" from="PlayerDetection" to="." method="_on_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_detection_body_exited"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_entered"]
